--- a/Betman/app/src/main/AndroidManifest.xml
+++ b/Betman/app/src/main/AndroidManifest.xml
@@ -4,7 +4,8 @@
 
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
     <uses-permission android:name="com.android.vending.BILLING" />
-
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
