--- a/Betman/app/build.gradle
+++ b/Betman/app/build.gradle
@@ -29,6 +29,7 @@ dependencies {
         compile 'com.squareup.retrofit2:retrofit:2.2.0'
         compile 'com.squareup.retrofit2:converter-gson:2.2.0'
         compile 'com.jakewharton:butterknife:8.5.1'
+        compile 'com.google.android.gms:play-services-ads:10.0.1'
     })
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:design:25.3.1'
