--- a/Betman/app/build.gradle
+++ b/Betman/app/build.gradle
@@ -1,8 +1,24 @@
+buildscript {
+    repositories {
+        maven { url 'https://maven.fabric.io/public' }
+    }
+
+    dependencies {
+        classpath 'io.fabric.tools:gradle:1.+'
+    }
+}
 apply plugin: 'com.android.application'
+apply plugin: 'io.fabric'
+
+repositories {
+    maven { url 'https://maven.fabric.io/public' }
+}
+
 
 android {
     compileSdkVersion 25
     buildToolsVersion "25.0.2"
+
     defaultConfig {
         applicationId "com.extinctspecie.betman"
         manifestPlaceholders = [onesignal_app_id: "d58187b6-68f7-445a-9636-f5de05c12906",
@@ -16,8 +32,10 @@ android {
     }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
+
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+
         }
     }
 }
@@ -36,10 +54,14 @@ dependencies {
         compile 'com.squareup.retrofit2:converter-gson:2.2.0'
         compile 'com.jakewharton:butterknife:8.5.1'
         compile 'com.google.android.gms:play-services-ads:10.2.1'
+
     })
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:design:25.3.1'
     compile 'com.android.support:cardview-v7:25.3.1'
     compile 'io.github.kobakei:ratethisapp:1.2.0'
     testCompile 'junit:junit:4.12'
+    compile('com.crashlytics.sdk.android:crashlytics:2.6.8@aar') {
+        transitive = true;
+    }
 }
