--- a/Betman/app/src/main/AndroidManifest.xml
+++ b/Betman/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     />
 
     <application
+
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher_football"
         android:label="@string/app_name"
@@ -23,6 +24,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <meta-data
+            android:name="com.parse.push.notification_icon"
+            android:resource="@drawable/ic_stat_ic_launcher_football"/>
         <meta-data
             android:name="io.fabric.ApiKey"
             android:value="8770327527378a1c68edaefd4c29d8ad1a09eaf2" />
